# grok-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MANIFEST.in  MEMORY_TOOL_README.md  OPTIMIZATION_GUIDE.md  README.md  STREAMING_IMPLEMENTATION.md  create_tableofcontents.py  debug_commands.py  debug_help_command.py  demo_grid_ui.py  demo_grokit.py  demo_session.json  demo_tokenCount.py  getXmodels.py  grok_session_costs.json  grokit_grid_costs.json  grokit_streaming_costs.json  leader_follower_demo.json  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  settings.json  setup.py  tableofcontents.md  test_blue_bar_fix.py  test_clear_command.py  test_commands_fix.py  test_commands_simple.py  test_complete_session_workflow.py  test_cost_integration.py  test_debug.py  test_debug_flag.py  test_entertaining_messages.py  test_final.py  test_fixes.py  test_fresh_session.py  (+25 more)
.claude/: settings.local.json
.github/: issue_template.md  pull_request_template.md
grok_cli/: __init__.py  api_client.py  cli.py  engine.py  enhanced_input.py  file_tools.py  grid_ui.py  grokit.py  input_handler.py  leader.py  markdown_renderer.py  markdown_renderer_backup.py  markdown_renderer_docs.md  markdown_renderer_rich.py  memory_manager.py  optimized_cli.py  persistence.py  request_manager.py  startup.json  streaming.py  streaming_ui.py  terminal_input.py  thinking.json  tokenCount.py  tool_output_capture.py  utils.py
grok_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tempWork/: cli_file_analysis.md  creative_solutions.md  dependency_map.md  entry_point_analysis.md  final_optimization_plan.md  fix_plan.md  followMe.md  optimized_cli_analysis.md  phase1_results.md  phase2_complete.md  redundancy_analysis.md  solution_synthesis.md  test_file_analysis.md  tool_failure_analysis.md
